--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cy-network-viewer",
   "author": "Keiichiro Ono <kono@ucsd.edu>",
-  "version": "v0.9.0",
-  "description": "React-based network visualizer using Cytoscpae.js",
-  "license": "UCSD",
+  "version": "v2.0.0",
+  "description": "React-based graph (network) visualizer component",
+  "license": "MIT",
   "keywords": [
     "cytoscape",
     "visualization",
@@ -34,33 +34,31 @@
     "url": "https://github.com/CyComponent/CyNetworkViewer/issues"
   },
   "dependencies": {
-    "cytoscape": "^2.7.6",
-    "immutable": "^3.7.6",
-    "react-redux": "^4.4.0",
-    "redux": "^3.3.1"
+    "cytoscape": "^2.7.10"
   },
   "peerDependencies": {
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0"
   },
   "devDependencies": {
-    "babel-core": "^6.5.1",
-    "babel-eslint": "^4.1.8",
-    "babel-jest": "^6.0.1",
-    "babel-loader": "^6.2.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-core": "^6.16.0",
+    "babel-eslint": "^6.1.2",
+    "babel-jest": "^16.0.0",
+    "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.23.0",
-    "eslint": "^2.0.0",
+    "eslint": "^3.7.1",
     "file-loader": "^0.8.5",
-    "jest-cli": "^0.8.2",
-    "jest-webpack-alias": "^2.0.0",
+    "jest": "^16.0.1",
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.12.13"
+    "webpack": "^1.13.1",
+    "webpack-link": "^0.2.0"
   },
   "jest": {
     "scriptPreprocessor": "<rootDir>/.preprocessor.js"
