--- a/examples/package.json
+++ b/examples/package.json
@@ -20,6 +20,7 @@
     "babel-preset-react": "^6.3.13",
     "css-loader": "^0.23.0",
     "file-loader": "^0.8.5",
+    "json-loader": "^0.5.4",
     "node-sass": "^3.4.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -27,6 +28,7 @@
     "redux-devtools": "^3.0.0",
     "redux-devtools-dock-monitor": "^1.0.1",
     "redux-devtools-log-monitor": "^1.0.1",
+    "redux-thunk": "^2.1.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
