--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "url": "https://github.com/CyComponent/CyNetworkViewer/issues"
   },
   "dependencies": {
-    "cytoscape": "^2.7.10"
+    "cy-network-store": "^2.0.0",
+    "cy-network-viewer-component": "^2.0.0"
   },
   "peerDependencies": {
     "react": "^15.3.0",
@@ -54,6 +55,8 @@
     "file-loader": "^0.8.5",
     "jest": "^16.0.1",
     "node-sass": "^3.4.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
